[package]
name = "websocket-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = {version = "0.7.8", features=["codec"]}
env_logger = "0.10.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
log = "0.4.17"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.19.0"
bytes = "1.4.0"
